# uzh

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  messingAround.py  taskOne4.py
.github/: FUNDING.yml
.github/workflows/: codeql.yml
C/: hello.c
CompLing/Programming Techniques of CL/: check_pcl1.py
Computational Linguistics/Bachelor/Sem 2/PCL 2/WiP Exercises/Exercise 3/: pyproject.toml
Computational Linguistics/Bachelor/Sem 2/PCL 2/WiP Exercises/Exercise 3/src/example_data/: sample_text_1.txt
Computational Linguistics/Bachelor/Sem 2/PCL 2/WiP Exercises/Exercise 3/tests/readability_analysis/: __main__.py
Computational Linguistics/Bachelor/Sem 2/PCL 2/WiP Exercises/Exercise 3/tests/readability_analysis/example_data/: sample_text_2.txt
Computational Science/ESC403/: test.py
Computational Science/INI401/: ex11.py
Computational Science/Test/: test.py  x.py
Infk&Wirt/: Test aufgabe.py
Informatik1/: friendlyPair.py  gcd_recursion.py  mess_around.py  my_grades.txt  passwordvalid.py  prime.py  pyramidScheme.py  studyresults.py  taskTwoFour.py  testing.py  workspace.code-workspace
Informatik1/Actual Midterm/: all_falsy.py  dict.py  is_valid_encoding.py  organize.py  scopes.py  shout.py  simple.py
Informatik1/Ex 11/: branches_merging.sh  clone_push.sh  init_add_commit.sh
Informatik1/Ex 12/: hex_gen.py  list_dict.py
Informatik1/Ex 3/: passwordvalid.py  pyramidScheme.py
Informatik1/Ex 4/: data_processing.py  gcd_recursion.py  my_grades.txt  studyresults.py
Informatik1/Ex 5/: juliets_nr.py  (+3 more)
Informatik2/: hello_world
(+1730 files in other folders)
